GeneratorGeneratedImage::drawPattern does not factor in its destination context's scale when generating its image tiles

https://bugs.webkit.org/show_bug.cgi?id=67729
<rdar://problem/10087050>

Reviewed by Beth Dakin.

No new tests, current pixel tests will cover this. Though some pixel results might improve to become less pixel-y.

* platform/graphics/GeneratorGeneratedImage.cpp:
(WebCore::GeneratorGeneratedImage::draw): Updated context to destContext for consistency.
(WebCore::GeneratorGeneratedImage::drawPattern): Taught drawPattern about the destination
scale factor to avoid having low-res generated images such as gradients in certain cases.
* platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::createCompatibleBuffer): Have the image buffer match the
context acceleration setting as well.


Canonical link: https://commits.webkit.org/95066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107157 268f45cc-cd09-0410-ab3c-d52691b4dbfc